added setMyUsername and fixed int id problem
